--- a/index.html
+++ b/index.html
@@ -12,7 +12,36 @@
 
     <div class="main-container">
         <div class="container">
-            
+            <div class="display"></div>
+            <div class="button-grp0">
+                <button id="clear">AC</button>
+                <button class="backspace">&larr;</button>
+                <button class="percentage">%</button>
+                <button class="orange operator">/</button>
+            </div>
+            <div class="button-grp1">
+                <button class="digit">7</button>
+                <button class="digit">8</button>
+                <button class="digit">9</button>
+                <button class="orange operator">*</button>
+            </div>
+            <div class="button-grp2">
+                <button class="digit">4</button>
+                <button class="digit">5</button>
+                <button class="digit">6</button>
+                <button class="orange operator">-</button>
+            </div>
+            <div class="button-grp3">
+                <button class="digit">1</button>
+                <button class="digit">2</button>
+                <button class="digit">3</button>
+                <button class="orange operator">+</button>
+            </div>
+            <div class="button-grp4">
+                <button class="zero digit">0</button>
+                <button class="dot ">.</button>
+                <button class="orange  equals">=</button>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
